2007-05-24  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * src/src_sinc.c
    Change macros into inline functions for better error checking.

2007-05-12  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * tests.Makefile.am
    Fix includes for varispeed_test target.

2007-04-20  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * tests/snr_bw_test.c
    Remove cruft.

    * doc/index.html
    Add link to Foobar 2000 plugin.

    * configure.ac tests/callback_hang_test.c
    Test for functions alarm and signal and only compile test if both are
    available.

2007-01-27  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * src/samplerate.c
    Refactor checking of supplied src ratio against min and max.

    * configure.ac
    Remove -pendantic from CFLAGS and add -std=gnu99.

    * tests/callback_hang_test.c tests/Makefile.am
    Add new test program and hook it into build.

    * src/src_linear.c src/src_sinc.c src/src_zoh.c
    Fix a bug where the src_callback_read () function would hang under varying
    src_ratio.

2007-01-21  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * doc/api.html doc/api_callback.html doc/api_misc.html
    Update docs to make handling of interleaved data more explicit.

2006-07-26  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * examples/audio_out.c
    Fix bug arising from last change.

    * configure.ac
    Add -Wpointer-arith to CFLAGS.

2006-07-12  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * examples/audio_out.c
    Be more explicit about setting the audio output format.

2006-06-06  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * src/samplerate.c src/src_linear.c src/src_sinc.c
    Fix MSVC compiler warnings.

2006-05-26  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * tests/calc_snr.c
    Fix minor bug in analysis routines.

    * tests/varispeed_test.c tests/snr_bw_test.c
    Fix knock on effects of above change.
