@@ -29,8 +29,8 @@
 #include	"config.h"
 
 #include	"samplerate.h"
-#include	"common.h"
 #include	"float_cast.h"
+#include	"common.h"
 
 static int psrc_set_converter (SRC_PRIVATE	*psrc, int converter_type) ;
 
